課題完了1-2再修正版

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <body>
   <script>
    while (true) {
-    let name = prompt("日本の首都は？");
+    const name = prompt("日本の首都は？");
      if (name === "東京" ) {
      alert ("正解");
      break;
